# iotp-device-esp32-cpp

./: .gitignore  CMakeLists.txt  Makefile  find_include_paths.py
main/: main.cpp
